--- a/index.ipynb
+++ b/index.ipynb
@@ -581,7 +581,7 @@
    "source": [
     "first_name = \"\"\n",
     "last_name = \"\"\n",
-    "for key, value in example_dictionary.items():\n",
+    "dfor key, value in example_dictionary.items():\n",
     "    if key == \"last_name\":\n",
     "        last_name = value.title()\n",
     "    if key == \"first_name\":\n",
